<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity"
    >
<!--    TITULO-->
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_app"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"/>

<!--    SEXO-->
    <LinearLayout
        android:id="@+id/linearLayoutSexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/buttonMan"
            android:layout_width="150dp"
            android:layout_height="170dp"
            android:background="@drawable/button_sexo"
            android:text="@string/woman"/>

        <Space
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/buttonWoman"
            android:layout_width="150dp"
            android:layout_height="170dp"
            android:text="@string/man"
            android:background="@drawable/button_sexo"
            />
    </LinearLayout>

<!--    ALTURA-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="vertical" />

    <!--    PESO E IDADE-->
    <LinearLayout
        android:id="@+id/linearLayoutAltura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutSexo"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/altura"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewAltura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/textViewAltura"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/seekBarAltura"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:max="250"
            android:progress="0"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutAltura">

<!--        PESO-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/peso"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textViewPeso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/textViewPeso"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="35sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_marginTop="30dp">

                <Button
                    android:id="@+id/buttonPesoLess"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:text="@string/less"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:ignore="DuplicateSpeakableTextCheck"
                    android:background="@drawable/button_redondo"/>

                <Space
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    />
                <Button
                    android:id="@+id/buttonPesoPlus"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:text="@string/plus"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:background="@drawable/button_redondo"/>
            </LinearLayout>


        </LinearLayout>


        <Space
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            />

        <!--        IDADE-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/idade"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textViewIdade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/textViewIdade"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_marginTop="30dp">

                <Button
                    android:id="@+id/buttonIdadeLess"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:text="@string/less"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:background="@drawable/button_redondo"/>
                <Space
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    />
                <Button
                    android:id="@+id/buttonIdadePlus"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:text="@string/plus"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:background="@drawable/button_redondo"/>
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/buttonCalcular"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/calcular"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/button_calcular"/>




</androidx.constraintlayout.widget.ConstraintLayout>
